--- a/config/sway/config
+++ b/config/sway/config
@@ -140,8 +140,8 @@ client.urgent           $urgent       $urgent       $foreground $urgent         
 client.placeholder      $pholdback    $pholdback    $urgenttext $pholdback      $pholdback
 
 # awesome program bindings
-bindsym $mod+u exec "emacsclient -c"
 bindsym $mod+i exec "firefox"
+bindsym $mod+o exec "emacsclient -e "(projectile-switch-project)" -c"
 
 # start the sway session so other things can listen for the sway session systemd unit
 exec "dbus-update-activation-environment WAYLAND_DISPLAY; systemctl --user import-environment WAYLAND_DISPLAY; systemctl --user start sway-session.target"
