--- a/config/sway/config
+++ b/config/sway/config
@@ -141,7 +141,7 @@ client.placeholder      $pholdback    $pholdback    $urgenttext $pholdback      
 
 # awesome program bindings
 bindsym $mod+i exec "firefox"
-bindsym $mod+o exec "emacsclient -e "(projectile-switch-project)" -c"
+bindsym $mod+o exec "emacsclient -e '(projectile-switch-project)' -c"
 
 # start the sway session so other things can listen for the sway session systemd unit
 exec "dbus-update-activation-environment WAYLAND_DISPLAY; systemctl --user import-environment WAYLAND_DISPLAY; systemctl --user start sway-session.target"
