--- a/config/sway/config
+++ b/config/sway/config
@@ -140,7 +140,8 @@ client.urgent           $urgent       $urgent       $foreground $urgent         
 client.placeholder      $pholdback    $pholdback    $urgenttext $pholdback      $pholdback
 
 # awesome program bindings
-bindsym $mod+i exec "firefox"
+bindsym $mod+n exec "firefox"
+bindsym $mod+i exec "emacsclient -e '(org-journal-new-entry)' -c"
 bindsym $mod+o exec "emacsclient -e '(projectile-switch-project)' -c"
 
 # start the sway session so other things can listen for the sway session systemd unit
